# TUSIR

./: .gitignore  404.html  mkdocs.yaml  objects.inv  pyproject.toml  sitemap.xml
docs/tables/raw/: form_1_detail.md  form_1_master.md  form_2_detail.md  form_2_master.md
search/: search_index.json
src/tusir/: __init__.py  api.py  maintainer.py
src/tusir/config/: settings.yaml
src/tusir/metadata/: tables.yaml
tables/raw/form_1_detail/: index.html
tables/raw/form_1_master/: index.html
tables/raw/form_2_detail/: index.html
tables/raw/form_2_master/: index.html
temp/csv/availability/: form_1_detail.csv  form_1_master.csv  form_2_detail.csv  form_2_master.csv
temp/csv/raw/form_1_detail/: 1387.csv  1393.csv  1398.csv
temp/csv/raw/form_1_master/: 1387.csv  1393.csv  1398.csv
temp/csv/raw/form_2_detail/: 1387.csv  1393.csv  1398.csv
temp/csv/raw/form_2_master/: 1387.csv  1393.csv  1398.csv
tusir/: __init__.py  api.py  maintainer.py
tusir/config/: settings.yaml
tusir/metadata/: raw_files.yaml  tables.yaml
