[project]
name = "tusir"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bssir[all]",
]

[tool.uv.sources]
bssir = { git = "https://github.com/Iran-Open-Data/BSSIR" }

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
private_lfsir = ["**/*.yaml"]
